Fix overflow issues of popup

--- a/styles.css
+++ b/styles.css
@@ -1253,7 +1253,8 @@ a {
   width: 100vw;
   height: 100vh;
   background-color: #2c2c2cd0;
-  overflow-y: scroll;
+  /* overflow-y: scroll; */
+  overflow-y: auto;
 }
 
 .popup-content {
